# zuul-ls

./: .gitignore  Cargo.toml  Makefile  README.md  config.yaml  package-lock.json  package.json  pnpm-lock.yaml  test.yaml
.github/workflows/: release.yaml
client/src/: extension.ts
editors/neovim/: zuul.lua
editors/vscode/zuul-ls/: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
editors/vscode/zuul-ls/src/: extension.ts
scripts/: zs
src/: config.rs  golden_key_test.rs  lib.rs  log.rs  ls.rs  main.rs  main_zls.rs  main_zs.rs  parser.rs  path.rs  repo.rs  search.rs  study_graph.rs  study_parser.rs  temp.rs  yaml_parse.rs
src/cli/: zls.rs  zs.rs
src/ls/: auto_complete.rs  cache.rs  file_type.rs  go_to_definition.rs  parser.rs  parser_zuul.rs  path.rs  server.rs  symbols.rs  variable_group.rs  workspace_symbol.rs
src/ls/parser/: ansible.rs  key_stack.rs  token.rs  token_base.rs  utils.rs  word.rs  zuul.rs
src/ls/parser/ansible/: task.rs  template.rs
src/parse/: mod.rs
src/parser/: ansible.rs  common.rs  job.rs  var_table.rs  variable.rs  yaml.rs  zuul.rs
src/parser/ansible/: defaults.rs  playbook.rs  tasks.rs  template.rs
src/parser/variable/: group.rs  table.rs
src/parser/zuul/: job.rs  nodeset.rs  pipeline.rs  project_template.rs  queue.rs  secret.rs  var_table.rs
src/search/: job_graph.rs  job_playbooks.rs  job_vars.rs  jobs.rs  path.rs  project_templates.rs  repo_vars.rs  report_print.rs  roles.rs  safe_print.rs  vars.rs  work_dir_vars.rs  work_dir_vars2.rs
testdata/: ansible_default.yaml  ansible_default.yaml.out  ansible_tasks.yaml  ansible_tasks.yaml.out  job_0.yaml  job_0.yaml.out  job_1.yaml.out  list_job_0.yaml.out  nodeset_0.yaml  nodeset_0.yaml.out  test.yaml  test.yaml.out
testdata/manual_cli/: config.yaml
testdata/manual_cli/base/repo1/zuul.d/: job.yaml
testdata/manual_cli/base/repo2/zuul.d/: job.yaml
testdata/manual_cli/base/repo3_work/zuul.d/: job.yaml
