[package]
name = "zuul-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zuul-search"
path = "src/main_zs.rs"

[[bin]]
name = "zuul-ls"
path = "src/main_zls.rs"

[lib]
name = "zuul_parser"
path = "src/lib.rs"

[dependencies]
bimap = "0.6.3"
calm_io = "0.1.1"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "6.0.1"
dirs = "5.0.1"
env_logger = "0.11.3"
hashlink = "0.8"
log = "0.4.21"
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
petgraph = "0.6.5"
phf = { version = "0.11.2", features = ["macros"] }
ropey = "1.6.1"
serde = "1.0.203"
serde_json = "1.0.118"
shellexpand = "3.1.0"
tokio = { version = "1.38.0", features = ["full", "io-std", "io-util"] }
tower-lsp = "0.20.0"
walkdir = "2.5.0"
yaml-rust2 = "0.8.0"
